# jvm-demo

./: .gitignore  CMakeLists.txt  ClassFileTest.txt  ClassReader.cpp  LICENSE  main.cpp  test.cpp
.github/workflows/: cmake.yml
libs/ZipLib/: CMakeLists.txt
src/: CMakeLists.txt  ClassParser.cpp  ClassPathParser.cpp  ClassReader.cpp  ConstantPool.cpp  MemberInfo.cpp  cmd.h  main.cpp
src/classfile/: AttributeInfo.h  ClassParser.cpp  ClassParser.h  ConstantPool.h  MemberInfo.h
src/classpath/: ClassPathParser.cpp  ClassPathParser.h  ClassReader.cpp  ClassReader.h
src/include/: AttributeInfo.h  ClassDataType.h  ClassParser.h  ClassPathParser.h  ClassReader.h  ConstantInfo.h  ConstantPool.h  MemberInfo.h  cmd.h
src/include/classfile/: AttributeInfo.h  ClassDataType.h
src/include/instructions/: ArithmeticInstructions.h  ConstInstructions.h  LoadInstructions.h  Loads.h  StackInstructions.h  Stores.h
src/include/instructions/base/: BytecodeReader.h  Instruction.h
src/include/instructions/math/: ArithmeticInstructions.h
src/include/rtda/: Frame.h  LocalVars.h  OperandStack.h  Stack.h  Thread.h
src/instructions/: ArithmeticInstructions.h  CompareInstructions.h  ConversionInstructions.h  StackInstructions.h
src/instructions/base/: BytecodeReader.h  Instruction.h
src/rtda/: Frame.h  OperandStack.h  Slot.h  Stack.h  Thread.cpp  Thread.h
tests/: CMakeLists.txt  ClassParserTest.cpp  ClassPathParserTest.cpp  ClassReaderTest.cpp  ConstantInfoTest.cpp  test.cpp
tests/javasample/com/sample/: Sample.java
tests/javasample/com/sample/ch03/: ClassFileTest.java
tests/src/: ClassParserTest.cpp  ClassPathParserTest.cpp  ConstantInfoTest.cpp  test_main.cpp
tests/src/classfile_test/: ClassParserTest.cpp  ConstantInfoTest.cpp
tests/src/classpath_test/: ClassPathParserTest.cpp  ClassReaderTest.cpp
tests/src/instructions_test/: LoadInstructionsTest.cpp
tests/src/rtda_test/: LocalVarsTest.cpp  OperandStackTest.cpp  StackTest.cpp  ThreadTest.cpp
